revise swagger TokenAuth
